fix: fix chroma alignment on highlighted lines

--- a/themes/lotusdocs/assets/docs/scss/custom/plugins/chroma/_default.scss
+++ b/themes/lotusdocs/assets/docs/scss/custom/plugins/chroma/_default.scss
@@ -39,10 +39,26 @@
         margin: 0 !important;
     }
 
+    // Adjust the highlighting to ensure proper alignment across the entire line
+    tr:has(td span[style*="background-color"]) {
+        background-color: inherit;
+    }
+
+    // Apply the same background to the td containing the line numbers when a line is highlighted
+    td:first-child span[style*="background-color"] {
+        display: block !important;
+        width: 100% !important;
+    }
+
+    // Ensure that the background color of highlighted lines extends across the entire width
+    td span[style*="background-color"] {
+        display: block !important;
+    }
+
     // Adjust the padding of the pre element
     pre {
         padding-left: 5px !important;
-        padding-right: 5px !important;
+        padding-right: 0px !important;
         padding-top: 1rem !important;
         padding-bottom: 1rem !important;
         margin: 0 !important;
